--- a/css/newcss.css
+++ b/css/newcss.css
@@ -46,3 +46,21 @@ and open the template in the editor.
   .navbar-nav  li a:hover {
     color: #1abc9c !important;
   }
+  
+  .clip-text {
+  background: url(https://i.imgur.com/LGtR3ku.gif);
+  background-size: cover;
+  background-position: center;
+  
+  -webkit-background-clip: text;
+  color: transparent;  s
+  
+  width: 300px;
+  height: 100px;
+  box-sizing: border-box;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 100px;
+  flex-shrink: 0;
+}
