--- a/css/newcss.css
+++ b/css/newcss.css
@@ -82,3 +82,12 @@ h2 {
   text-transform: uppercase;
   white-space: nowrap;
 }
+
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+.sticky + .content {
+    padding-top: 60px;
+}
