--- a/css/newcss.css
+++ b/css/newcss.css
@@ -96,3 +96,21 @@ h2 {
     text-align: left;
     background-color: #1abc9c;
 }
+.visible {
+    width: 50px;
+    height: 50px;
+    font-size: 13px;
+    background-color: #474e5d;
+}
+.hidden {
+    width: 50px;
+    height: 50px;
+    font-size: 0px;
+    background-color: #474e5d;
+}
+.done {
+    width: 50px;
+    height: 50px;
+    font-size: 13px;
+    background-color: #474e5d;
+}
