--- a/css/newcss.css
+++ b/css/newcss.css
@@ -15,11 +15,11 @@ and open the template in the editor.
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-    background-color: #1abc9c; /* Green */
+    background-color: black; /* Green */
     color: #ffffff;
   }
   .bg-2 { 
-    background-color: #474e5d; /* Dark Blue */
+    background-color: #CE1D1D; /* Dark Blue */
     color: #ffffff;
   }
   .bg-3 { 
@@ -27,7 +27,7 @@ and open the template in the editor.
     color: #555555;
   }
   .bg-4 { 
-    background-color: 	#FF00FF; /* Black Gray */
+    background-color: 	#5C5656; /* Black Gray */
     color: #fff;
   }
   .container-fluid {
@@ -46,6 +46,14 @@ and open the template in the editor.
   .navbar-nav  li a:hover {
     color: #1abc9c !important;
   }
+  
+  .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50px;
+  height: 50px;
+}
   
   .clip-text {
   background: url(https://i.imgur.com/LGtR3ku.gif);
